add Scala implementation + increase number of iterations + fix warm up implementation + tune of JVM options + clean up .pom files