@@ -2,7 +2,7 @@
 
 CP=java-sma/target/classes:shared/target/classes
 
-JAVA_OPTS='-server -XX:+AggressiveOpts -XX:CompileThreshold=1000'
+JAVA_OPTS='-server -Xms2g -Xmx2g -XX:NewSize=1g -Xss228k -XX:PermSize=64m -XX:MaxPermSize=64m -XX:+TieredCompilation -XX:+UseG1GC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch'
 
 java -version
 
